@@ -68,7 +68,10 @@ The path to output destination folder. By default the directory at which the app
 .BR "*" " AutoCAD DXF 2010 (flat) files (*.dxf) = 13,"
 .RE
 .RS
-.BR "*" " AutoCAD DXF 2013 (flat) files (*.dxf) = 14."
+.BR "*" " AutoCAD DXF 2013 (flat) files (*.dxf) = 14,"
+.RE
+.RS
+.BR "*" " PDF tiled files (*.pdf) = 33."
 .RE
 .IP "--bdxf"
 .RB "Export dxf in binary form."
