@@ -3343,7 +3343,6 @@ void MainWindow::SetLayoutModeActions()
     ui->actionExportAs->setEnabled(enabled);
     ui->actionPrintPreview->setEnabled(enabled);
     ui->actionPrintPreviewTiled->setEnabled(enabled);
-    ui->actionSaveAsTiledPDF->setEnabled(enabled);
     ui->actionPrint->setEnabled(enabled);
     ui->actionPrintTiled->setEnabled(enabled);
 }
@@ -4013,7 +4012,6 @@ void MainWindow::CreateActions()
     connect(ui->actionExportAs, &QAction::triggered, this, &MainWindow::ExportLayoutAs);
     connect(ui->actionPrintPreview, &QAction::triggered, this, &MainWindow::PrintPreviewOrigin);
     connect(ui->actionPrintPreviewTiled, &QAction::triggered, this, &MainWindow::PrintPreviewTiled);
-    connect(ui->actionSaveAsTiledPDF, &QAction::triggered, this, &MainWindow::SaveAsTiledPDF);
     connect(ui->actionPrint, &QAction::triggered, this, &MainWindow::PrintOrigin);
     connect(ui->actionPrintTiled, &QAction::triggered, this, &MainWindow::PrintTiled);
 
